--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ p {
 
 button {
 	margin-bottom: 1vh;
-	height: 3rem;
+	height: 2rem;
 	width: 10rem;
 	border-radius: 1rem;
 	outline: none;
@@ -162,3 +162,16 @@ button.cell {
 	border: 1px solid black;
 	font-size: 50px;
 }
+
+div.begin {
+	grid-row: 1/-1;
+	grid-column: 1/-1;
+	justify-self: center;
+	font-size: 40px;
+	animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+	0%, 100% {opacity: 1;}
+  	50% {opacity: 0;}
+  }
